# snipy

./: .gitignore  README copy.md  README.md  README_copy.md  SnipPy_ASDF_Class.ipynb  SnipPy_FITS.ipynb  SnipPy_FITS_Class.ipynb  Test_Notebook.ipynb  Test_Notebook_v2.ipynb  pyproject.toml  sharedwidget.js  sharedwidget_V1.css  sharedwidget_V1.js  sharedwidget_V2.js
.ipynb_checkpoints/: SnipPy_06112025-checkpoint.ipynb  SnipPy_FITS-06232025-checkpoint.ipynb  SnipPy_FITS-checkpoint.ipynb  sharedwidget_V1-06232025-Copy1-checkpoint.js  sharedwidget_V1-06232025-checkpoint.js  sharedwidget_V1-Copy1-checkpoint.css  sharedwidget_V1-checkpoint.css  sharedwidget_V1-checkpoint.js
.virtual_documents/: SnipPy_FITS_Class.ipynb
Notebooks/: 01_GettingStarted.ipynb  02_GatherInfo.ipynb
src/snipy/: __init__.py
src/snipy/.ipynb_checkpoints/: Test_Notebook-checkpoint.ipynb  __init__-checkpoint.py
src/snipy/core/: cutout.py  image_utils.py  snippy_widget.py
src/snipy/static/: sharedwidget_V1.js  widget.css  widget.js
src/snipy/static/.ipynb_checkpoints/: sharedwidget_V1-checkpoint.js
src/snipy/widgets/: __init__.py  coordinates.py  image_counter.py  normalization.py  ratio.py  save.py
