[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snipy"
version = "0.0.0"
dependencies = ["anywidget","astropy","ipywidgets","traitlets","astrocut","matplotlib","numpy","IPython"]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]
