[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snipy"
version = "0.0.0"
dependencies = [
    "anywidget==0.9.18",
    "astropy==7.1.0",
    "ipywidgets==8.1.7",
    "traitlets==5.14.3",
    "astrocut==1.0.1",
    "matplotlib==3.10.3",
    "numpy==2.2.6",
    "IPython==9.3.0",
    "ipykernel==6.30.0",
    "jupyterlab==4.4.5",
    ]
readme = "README.md"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]
